/*
Copyright (C) 2014 PLVision.

This file is part of "Ostinato"

This is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>

This module is developed by PLVision  <developers@plvision.eu>
*/

syntax = "proto2";

import "protocol.proto";

package OstProto;

// Spanning Tree Protocol
message Stp {
    optional uint32    protocol_id = 1 [default = 0x0000];
    optional uint32    protocol_version_id = 2 [default = 0x00];
    optional uint32    bpdu_type = 3 [default = 0x00];
    optional uint32    flags = 4;
    optional uint64    root_id = 5;
    optional uint32    root_path_cost = 6;
    optional uint64    bridge_id = 7;
    optional uint32    port_id = 8;
    optional uint32    message_age = 9;
    optional uint32    max_age = 10;
    optional uint32    hello_time = 11;
    optional uint32    forward_delay = 12;
}

extend Protocol {
    optional Stp stp = 210;
}
